--- a/.github/workflows/l2-clone.yml
+++ b/.github/workflows/l2-clone.yml
@@ -141,6 +141,14 @@ jobs:
           set -euo pipefail
           terraform apply -auto-approve tfplan
 
+      - name: Capture terraform outputs
+        id: tfout
+        working-directory: terraform/l2
+        run: |
+          set -euo pipefail
+          mkdir -p ../../artifacts/l2_inventory
+          terraform output -json > ../../artifacts/l2_inventory/terraform_outputs.json
+
       - name: Verify IP via guest agent
         id: ga_check
         shell: bash
@@ -148,16 +156,19 @@ jobs:
           set -euo pipefail
           echo "Querying Proxmox guest agent for IP address..."
 
-          # Load VM details from terraform outputs
-          vmid="$(jq -r '.vm_id.value' terraform/l2/terraform.tfstate)"
-          node="$(jq -r '.node.value' terraform/l2/terraform.tfstate)"
+          # Read from the outputs file we just wrote
+          OUT="artifacts/l2_inventory/terraform_outputs.json"
+          jq -r 'keys[]' "$OUT"
 
-          if [[ -z "$vmid" || "$vmid" == "null" ]]; then
-            echo "❌ No VMID found in terraform outputs"
+          vmid="$(jq -r '.vm_id.value' "$OUT")"
+          node="$(jq -r '.node.value' "$OUT")"
+
+          if [[ -z "${vmid:-}" || "$vmid" == "null" ]]; then
+            echo "❌ No vm_id found in $OUT"
             exit 1
           fi
-          if [[ -z "$node" || "$node" == "null" ]]; then
-            echo "❌ No node found in terraform outputs"
+          if [[ -z "${node:-}" || "$node" == "null" ]]; then
+            echo "❌ No node found in $OUT"
             exit 1
           fi
 
@@ -165,18 +176,12 @@ jobs:
           HOST="${PVE_ACCESS_HOST%/}/api2/json"
 
           echo "Fetching GA network interfaces for VMID $vmid on node $node..."
-          resp="$(curl -fsS -H "$AUTH" "$HOST/nodes/$node/qemu/$vmid/agent/network-get-interfaces" || true)"
+          resp="$(curl -fsS -H "$AUTH" "$HOST/nodes/$node/qemu/$vmid/agent/network-get-interfaces")"
 
-          if [[ -z "$resp" ]]; then
-            echo "❌ Guest agent query returned no data"
-            exit 1
-          fi
-
-          ip="$(echo "$resp" | jq -r '.data[]?."ip-addresses"[]? | select(.["ip-address-type"]=="ipv4" and .["ip-address"]!="127.0.0.1") | .["ip-address"]' | head -n1 || true)"
-
-          if [[ -z "$ip" || "$ip" == "null" ]]; then
+          ip="$(echo "$resp" | jq -r '.data[]?."ip-addresses"[]? | select(.["ip-address-type"]=="ipv4" and .["ip-address"]!="127.0.0.1") | .["ip-address"]' | head -n1)"
+          if [[ -z "${ip:-}" || "$ip" == "null" ]]; then
             echo "❌ No valid IPv4 address returned by guest agent"
-            echo "Full GA response for debugging:"
+            echo "Full GA response:"
             echo "$resp" | jq .
             exit 1
           fi
@@ -184,13 +189,15 @@ jobs:
           echo "✅ Guest agent reports IP: $ip"
           echo "ip=$ip" >> "$GITHUB_OUTPUT"
 
-          # Enrich existing inventory files
-          jq --arg ip "$ip" '.[] |= . + {ip: $ip, guest_agent_healthy: true}' artifacts/l2_inventory/inventory.json > artifacts/l2_inventory/inventory.json.tmp
+          # Enrich inventory with GA fields (non-destructive)
+          jq --arg ip "$ip" '.[] |= . + {guest_agent_ip: $ip, guest_agent_healthy: true}' artifacts/l2_inventory/inventory.json > artifacts/l2_inventory/inventory.json.tmp
           mv artifacts/l2_inventory/inventory.json.tmp artifacts/l2_inventory/inventory.json
 
-          # Update YAML (simple append or rewrite)
-          echo "ip: $ip" >> artifacts/l2_inventory/inventory.yaml
-          echo "guest_agent_healthy: true" >> artifacts/l2_inventory/inventory.yaml
+          # Also reflect in YAML (append simple fields)
+          {
+            echo "guest_agent_ip: $ip"
+            echo "guest_agent_healthy: true"
+          } >> artifacts/l2_inventory/inventory.yaml
 
           echo "Updated inventory:"
           cat artifacts/l2_inventory/inventory.json
