--- a/.github/workflows/l2-clone.yml
+++ b/.github/workflows/l2-clone.yml
@@ -150,61 +150,57 @@ jobs:
       #     terraform output -json > ../../artifacts/l2_inventory/terraform_outputs.json
       #     cat ../../artifacts/l2_inventory/terraform_outputs.json
 
-      - name: Verify IP via guest agent
-        id: ga_check
+      - name: Verify guest agent IP and enrich inventory
         shell: bash
         run: |
           set -euo pipefail
-          ls -lrth
-          ls -lrth artifacts/
-          cat artifacts/l2_inventory/inventory.json
-          echo "Querying Proxmox guest agent for IP address..."
 
-          # Read from the outputs file we just wrote
-          OUT="artifacts/l2_inventory/inventory.json"
-          jq -r 'keys[]' "$OUT"
-
-          vmid="$(jq -r '.vm_id.value' "$OUT")"
-          node="$(jq -r '.node.value' "$OUT")"
-
-          if [[ -z "${vmid:-}" || "$vmid" == "null" ]]; then
-            echo "❌ No vm_id found in $OUT"
-            exit 1
-          fi
-          if [[ -z "${node:-}" || "$node" == "null" ]]; then
-            echo "❌ No node found in $OUT"
+          INV="artifacts/l2_inventory/inventory.json"
+          if [[ ! -f "$INV" ]]; then
+            echo "inventory.json not found at $INV"
             exit 1
           fi
 
           AUTH="Authorization: PVEAPIToken=${PM_TOKEN_ID}=${PM_TOKEN_SECRET}"
           HOST="${PVE_ACCESS_HOST%/}/api2/json"
 
-          echo "Fetching GA network interfaces for VMID $vmid on node $node..."
-          resp="$(curl -fsS -H "$AUTH" "$HOST/nodes/$node/qemu/$vmid/agent/network-get-interfaces")"
+          # Iterate each host key in the inventory
+          while IFS= read -r host; do
+            vmid="$(jq -r --arg h "$host" '.[$h].vm_id' "$INV")"
+            node="$(jq -r --arg h "$host" '.[$h].node'   "$INV")"
 
-          ip="$(echo "$resp" | jq -r '.data[]?."ip-addresses"[]? | select(.["ip-address-type"]=="ipv4" and .["ip-address"]!="127.0.0.1") | .["ip-address"]' | head -n1)"
-          if [[ -z "${ip:-}" || "$ip" == "null" ]]; then
-            echo "❌ No valid IPv4 address returned by guest agent"
-            echo "Full GA response:"
-            echo "$resp" | jq .
-            exit 1
-          fi
+            if [[ -z "${vmid:-}" || "$vmid" == "null" ]]; then
+              echo "no vm_id for host $host in inventory"
+              exit 1
+            fi
+            if [[ -z "${node:-}" || "$node" == "null" ]]; then
+              echo "no node for host $host in inventory"
+              exit 1
+            fi
 
-          echo "✅ Guest agent reports IP: $ip"
-          echo "ip=$ip" >> "$GITHUB_OUTPUT"
+            echo "Querying guest agent for $host (vmid=$vmid node=$node)"
+            resp="$(curl -fsS -H "$AUTH" "$HOST/nodes/$node/qemu/$vmid/agent/network-get-interfaces")"
 
-          # Enrich inventory with GA fields (non-destructive)
-          jq --arg ip "$ip" '.[] |= . + {guest_agent_ip: $ip, guest_agent_healthy: true}' artifacts/l2_inventory/inventory.json > artifacts/l2_inventory/inventory.json.tmp
-          mv artifacts/l2_inventory/inventory.json.tmp artifacts/l2_inventory/inventory.json
+            ip="$(echo "$resp" | jq -r '.data[]?."ip-addresses"[]? | select(.["ip-address-type"]=="ipv4" and .["ip-address"]!="127.0.0.1") | .["ip-address"]' | head -n1)"
+            if [[ -z "${ip:-}" || "$ip" == "null" ]]; then
+              echo "no valid IPv4 reported by guest agent for $host"
+              echo "full GA response follows:"
+              echo "$resp" | jq .
+              exit 1
+            fi
 
-          # Also reflect in YAML (append simple fields)
-          {
-            echo "guest_agent_ip: $ip"
-            echo "guest_agent_healthy: true"
-          } >> artifacts/l2_inventory/inventory.yaml
+            echo "guest agent IP for $host: $ip"
 
-          echo "Updated inventory:"
-          cat artifacts/l2_inventory/inventory.json
+            # Update the JSON for this host only
+            jq --arg h "$host" --arg ip "$ip" \
+               '.[$h] += {guest_agent_ip: $ip, guest_agent_healthy: true}' \
+               "$INV" > "$INV.tmp"
+            mv "$INV.tmp" "$INV"
+
+          done < <(jq -r 'keys[]' "$INV")
+
+          echo "Updated inventory.json:"
+          cat "$INV" | jq .
 
       - name: List artifacts folder
         run: |
